[package]
name = "rendy-memory"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]

[dependencies]
bitflags = "*"
failure = "*"
veclist = "*"
gfx-hal = { git = "https://github.com/zakorgy/gfx.git", optional = true, branch = "metal_for_gecko" }
ash = { version = "*", optional = true }
either = "*"

[target.'cfg(not(features = "ash"))'.dependencies]
smallvec = "*"
